--- a/index.html
+++ b/index.html
@@ -24,6 +24,33 @@
         <h2>I AM A JUNIOR WEB <br>DEVELOPER</h2>
         <h1>Alvin Lai</h1>
     </section>
+    <main>
+        <section class="index-links">
+            <a href="#">
+                <div class="index-boxlink-square">
+                    <h3>About me</h3>
+                </div>
+            </a>
+            <a href="#">
+                <div class="index-boxlink-rec">
+                    <h3>Projects</h3>
+                </div>
+            </a>
+            <a href="#">
+                <div class="index-boxlink-square">
+                    <h3>Blogs</h3>
+                </div>
+            </a>
+            <a href="#">
+                <div class="index-boxlink-rec">
+                <h3>ALz</h3>
+                </div>
+            </a>
+            
+        </section>
+    </main>
+
+    <section id="social-links"
     
 </body>
 </html>
