--- a/index.html
+++ b/index.html
@@ -50,7 +50,20 @@
         </section>
     </main>
 
-    <section id="social-links"
+    <section id="social-links">
+        <div>
+            <p>Come join me on my journey.</p>
+                <a href="#"><img src="Images/facebook.svg" alt="Facebook" /></a>
+                <a href="#"><img src="Images/twitter.svg" alt="Twitter" /></a>
+                <a href="#"><img src="Images/instagram.svg" alt="instagram" /></a>
+                <a href="#"><img src="Images/linkedin.svg" alt="Linkedin" /></a>
+
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2022 Alvin Lai</p>
+    </footer>
     
 </body>
 </html>
