--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="about.css">
-    <title>About</title>
+    <title>About</title>    
 </head>
 <body>
 
@@ -23,6 +23,11 @@
             </ul>
         </nav>
     </header>
+
+    <section id="myphoto">
+        <img src="Images/alcropped.jpg" alt=""/>
+        <a href="" class="resume-button">Resume</a>
+    </section>
 
     <!-- About me content -->
     <main class="content">
@@ -46,7 +51,7 @@
         </div>
     </main>
 
-    <section id="social-links">
+    <!-- <section id="social-links">
         <div>
             <p>Come join me on my journey.</p>
                 <a href="#"><img src="Images/facebook.svg" alt="Facebook" /></a>
@@ -55,7 +60,7 @@
                 <a href="#"><img src="Images/linkedin.svg" alt="Linkedin" /></a>
 
         </div>
-    </section> 
+    </section>  -->
 
     <footer>
         <p>&copy; 2022 Alvin Lai</p>
