--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="header-nav">
-            <h1 class="logo"><a href="index.html">ALz</a></h1>
+            <h1 class="logo"><a href="index2.html">ALz</a></h1>
         <!-- main navigation -->
             <ul class="nav-menu">
                 <li class="nav-item"><a href='#'>About</a></li>
@@ -32,12 +32,14 @@
     <!-- Social links  -->
     
     <section id="social-links">
+
+        <p>Come join me on my journey.</p>
         <div>
-            <p>Come join me on my journey.</p>
-                <a href="#"><img src="Images/facebook.svg" alt="Facebook" /></a>
-                <a href="#"><img src="Images/twitter.svg" alt="Twitter" /></a>
-                <a href="#"><img src="Images/instagram.svg" alt="instagram" /></a>
-                <a href="#"><img src="Images/linkedin.svg" alt="Linkedin" /></a>
+            
+            <a href="#"><img src="Images/facebook.svg" alt="Facebook" /></a>
+            <a href="#"><img src="Images/twitter.svg" alt="Twitter" /></a>
+            <a href="#"><img src="Images/instagram.svg" alt="instagram" /></a>
+            <a href="#"><img src="Images/linkedin.svg" alt="Linkedin" /></a>
 
         </div>
     </section> 
