--- a/about.html
+++ b/about.html
@@ -24,31 +24,24 @@
         </nav>
     </header>
 
-    <section id="myphoto">
+    <!-- <section id="myphoto">
         <img src="Images/alcropped.jpg" alt=""/>
         <a href="" class="resume-button">Resume</a>
-    </section>
+    </section> -->
 
     <!-- About me content -->
     <main class="content">
-        <div class="about-content">
-            <h2>About me</h2>
-            <article>
-                <h3>Why Web Dev</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, sapiente veniam at libero quo alias autem sequi ratione voluptatum repellendus natus eos reiciendis incidunt fugiat laboriosam excepturi? Sunt, ipsum eius.</p>
-            </article>
-            <article>
-                <h3>Previous work</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae aliquam, repellendus ullam culpa ut ducimus tempore sequi. Voluptatum eligendi, sapiente perspiciatis id, in sed cum beatae necessitatibus, earum quisquam maxime.</p>
-            </article>
-            <article>
-                <h3>Hobbies</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, expedita. Culpa, neque cumque. Reiciendis quia, non numquam ducimus laboriosam, totam accusamus labore praesentium soluta aperiam quam dolores nam iusto voluptate!</p>
-            </article>
-
-
-
+        <div class="about-photo">
+            <img src="Images/alcropped.jpg" alt="alvin">
         </div>
+        <div class="about-content">
+            <h1>About me</h1>
+           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores ad fuga assumenda laborum, quod dolore error quo quia numquam! Tempora magni explicabo excepturi nihil earum itaque qui, magnam voluptas labore?</p>
+            <button type="button">Resume</button>
+        </div>
+        <!-- <div class="about-photo">
+            <img src="Images/alcropped.jpg" alt="alvin">
+        </div> -->
     </main>
 
     <!-- <section id="social-links">
