about resume done

--- a/about.html
+++ b/about.html
@@ -37,7 +37,10 @@
         <div class="about-content">
             <h1>About me</h1>
            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores ad fuga assumenda laborum, quod dolore error quo quia numquam! Tempora magni explicabo excepturi nihil earum itaque qui, magnam voluptas labore?</p>
-            <button type="button">Resume</button>
+           <a href="Images/Resume.pdf.pdf" download="resume">
+                <button type="button">Resume</button>
+           </a>
+           
         </div>
         <!-- <div class="about-photo">
             <img src="Images/alcropped.jpg" alt="alvin">
