--- a/port3.html
+++ b/port3.html
@@ -25,14 +25,14 @@
     <section id="projects">
         <h2 class="projects-header">See my projects.</h2>
     <div class="project-grid">
-        <a href="#" target="_blank" class="project-tile">
-            <img class="project-image" src="Images/box.jpg" alt="band">
+        <a href="https://github.com/" target="_blank" class="project-tile">
+            <img class="project-image" src="Images/band1.jpg" alt="band">
             <p><span class="project-title">Band Page</span></p>
 
         </a>
 
-        <a href="#" target="_blank" class="project-tile">
-            <img class="project-image" src="Images/box.jpg" alt="portfolio">
+        <a href="https://github.com/" target="_blank" class="project-tile">
+            <img class="project-image" src="Images/homepage1.jpg" alt="portfolio">
             <p><span class="project-title">My Portfolio</span></p>
 
         </a>
@@ -40,13 +40,13 @@
 
 
         <a href="#" target="_blank" class="project-tile">
-            <img class="project-image" src="Images/box.jpg" alt="TBA">
+            <img class="project-image" src="Images/box1.jpg" alt="TBA">
             <p><span class="project-title">To Be Made</span></p>
 
         </a>
 
         <a href="#" target="_blank" class="project-tile">
-            <img class="project-image" src="Images/box.jpg" alt="TBA">
+            <img class="project-image" src="Images/box1.jpg" alt="TBA">
             <p><span class="project-title">To Be Made</span></p>
 
         </a>
