--- a/blogpg5.html
+++ b/blogpg5.html
@@ -18,7 +18,7 @@
 
     <main class="blogcontainer">
         <header>
-            <h1 class="blogtitle">Why you should be a web developer.</h1>
+            <h1 class="blogtitle">Pathways to be a software developer.</h1>
         </header>
         <article class="blogarticle">
             <p class="blogpagetext">
@@ -26,7 +26,7 @@
             </p>
             <!-- image for blog -->
 
-            <img src="Images/blog1.jpg" alt="TBA" class="blogimg">
+            <img src="Images/blog5.jpg" alt="TBA" class="blogimg">
 
         </article>
         
