--- a/about.html
+++ b/about.html
@@ -12,12 +12,12 @@
 
     <header>
         <nav class="header-nav">
-            <h1 class="logo"><a href="index.html">ALz</a></h1>
+            <h1 class="logo"><a href="index2.html">ALz</a></h1>
         <!-- main navigation -->
             <ul class="nav-menu">
-                <li class="nav-item"><a href='#'>About</a></li>
-                <li class="nav-item"><a href='#'>Portfolio</a></li>
-                <li class="nav-item"><a href='#'>Blog</a></li>
+                <li class="nav-item"><a href='about.html'>About</a></li>
+                <li class="nav-item"><a href='port3.html'>Portfolio</a></li>
+                <li class="nav-item"><a href='blog.html'>Blog</a></li>
                 <li class="nav-item"><a href='#'>Contact</a></li>
 
             </ul>
