--- a/index2.html
+++ b/index2.html
@@ -13,9 +13,9 @@
             <h1 class="logo"><a href="index2.html">ALz</a></h1>
         <!-- main navigation -->
             <ul class="nav-menu">
-                <li class="nav-item"><a href='#'>About</a></li>
-                <li class="nav-item"><a href='#'>Portfolio</a></li>
-                <li class="nav-item"><a href='#'>Blog</a></li>
+                <li class="nav-item"><a href='about.html'>About</a></li>
+                <li class="nav-item"><a href='port3.html'>Portfolio</a></li>
+                <li class="nav-item"><a href='blog.html'>Blog</a></li>
                 <li class="nav-item"><a href='#'>Contact</a></li>
 
             </ul>
@@ -36,10 +36,10 @@
         <p>Come join me on my journey.</p>
         <div>
             
-            <a href="#"><img src="Images/facebook.svg" alt="Facebook" /></a>
-            <a href="#"><img src="Images/twitter.svg" alt="Twitter" /></a>
-            <a href="#"><img src="Images/instagram.svg" alt="instagram" /></a>
-            <a href="#"><img src="Images/linkedin.svg" alt="Linkedin" /></a>
+            <a href="https://www.facebook.com/"><img src="Images/facebook.svg" alt="Facebook" /></a>
+            <a href="https://twitter.com/"><img src="Images/twitter.svg" alt="Twitter" /></a>
+            <a href="https://www.instagram.com/"><img src="Images/instagram.svg" alt="instagram" /></a>
+            <a href="https://au.linkedin.com/"><img src="Images/linkedin.svg" alt="Linkedin" /></a>
 
         </div>
     </section> 
