--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                 <li class="nav-item"><a href='about.html'>About</a></li>
                 <li class="nav-item"><a href='port3.html'>Portfolio</a></li>
                 <li class="nav-item"><a href='blog.html'>Blog</a></li>
-                <li class="nav-item"><a href='#'>Contact</a></li>
+                <li class="nav-item"><a href='contact.html'>Contact</a></li>
 
             </ul>
         </nav>
