--- a/about.html
+++ b/about.html
@@ -36,7 +36,9 @@
         </div>
         <div class="about-content">
             <h1>About me</h1>
-           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores ad fuga assumenda laborum, quod dolore error quo quia numquam! Tempora magni explicabo excepturi nihil earum itaque qui, magnam voluptas labore?</p>
+           <p>My name is Alvin Lai, I am looking to make a move into the tech world with a diploma of information technology at coders academy. I have always had a keen interest in technology and games. I am fascinated with how lines of code can develop into system automations and games.
+            <br>At university I pursued a career in health, and this will be my 8th year in pharmacy. However, being in pharmacy during the pandemic has been quite stressful and has not been as fulfilling as I once believed it would be. I am looking to find that spark in technology and development.
+            </p>
            <a href="Images/Resume.pdf.pdf" download="resume">
                 <button type="button">Resume</button>
            </a>
