--- a/port3.html
+++ b/port3.html
@@ -22,6 +22,8 @@
         </ul>
     </nav>
 
+    <!-- Blog tiles -->
+
     <section id="projects">
         <h2 class="projects-header">See my projects.</h2>
     <div class="project-grid">
