--- a/src/contact.html
+++ b/src/contact.html
@@ -12,7 +12,7 @@
 
     <header>
         <nav class="header-nav">
-            <h1 class="logo"><a href="index2.html">ALz</a></h1>
+            <h1 class="logo"><a href="index.html">ALz</a></h1>
         <!-- main navigation -->
             <ul class="nav-menu">
                 <li class="nav-item"><a href='about.html'>About</a></li>
