--- a/src/port3.html
+++ b/src/port3.html
@@ -11,7 +11,7 @@
 <body>
 
     <nav class="header-nav">
-        <h1 class="logo"><a href="index2.html">ALz</a></h1>
+        <h1 class="logo"><a href="index.html">ALz</a></h1>
     <!-- main navigation -->
         <ul class="nav-menu"> 
             <li class="nav-item"><a href='about.html'>About</a></li>
